datasets/dataset_txt/compose/compose_691.txt
alimp5 commented on 5 May 2018
Hi Docker Team,
Description of the issue
I installed the last versions of docker and docker-compose and python-docker on Kali-Linux 2018-2.
When i call docker-compose in terminal, I see error below:
root@kali:~# docker-compose 
Traceback (most recent call last):
  File "/usr/bin/docker-compose", line 11, in <module>
    load_entry_point('docker-compose==1.17.1', 'console_scripts', 'docker-compose')()
  File "/usr/local/lib/python2.7/dist-packages/pkg_resources/__init__.py", line 587, in load_entry_point
    return get_distribution(dist).load_entry_point(group, name)
  File "/usr/local/lib/python2.7/dist-packages/pkg_resources/__init__.py", line 2800, in load_entry_point
    return ep.load()
  File "/usr/local/lib/python2.7/dist-packages/pkg_resources/__init__.py", line 2431, in load
    return self.resolve()
  File "/usr/local/lib/python2.7/dist-packages/pkg_resources/__init__.py", line 2437, in resolve
    module = __import__(self.module_name, fromlist=['__name__'], level=0)
  File "/usr/lib/python2.7/dist-packages/compose/cli/main.py", line 20, in <module>
    from ..bundle import get_image_digests
  File "/usr/lib/python2.7/dist-packages/compose/bundle.py", line 12, in <module>
    from .config.serialize import denormalize_config
  File "/usr/lib/python2.7/dist-packages/compose/config/__init__.py", line 6, in <module>
    from .config import ConfigurationError
  File "/usr/lib/python2.7/dist-packages/compose/config/config.py", line 13, in <module>
    from cached_property import cached_property
  File "/usr/lib/python2.7/dist-packages/cached_property.py", line 11, in <module>
    import asyncio
  File "/usr/local/lib/python2.7/dist-packages/asyncio/__init__.py", line 9, in <module>
    from . import selectors
  File "/usr/local/lib/python2.7/dist-packages/asyncio/selectors.py", line 39
    "{!r}".format(fileobj)) from None
                               ^
SyntaxError: invalid syntax
Python (2 & 3) version
Python2 installed as default on Kali-linux.
root@kali:~# python -V
Python 2.7.15rc1
root@kali:~# python3 -V
Python 3.6.5rc1
Context information (for bug reports)
Output of "docker-compose version":
1.17.1-2
Output of "docker-engine version":
17.05.0~ce-0~debian-jessie
Output of "docker version":
1.5-1+b1
Additional information
I installed docker-engine via below link. but failed:
https://www.linuxbabe.com/linux-server/install-docker-on-debian-8-jessie-server
output of failed docker-engine installation:
Setting up docker-engine (17.05.0~ce-0~debian-jessie) ...
Job for docker.service failed because the control process exited with error code.
See "systemctl status docker.service" and "journalctl -xe" for details.
invoke-rc.d: initscript docker, action "start" failed.
● docker.service - Docker Application Container Engine
   Loaded: loaded (/lib/systemd/system/docker.service; disabled; vendor preset: disabled)
   Active: activating (auto-restart) (Result: exit-code) since Sat 2018-05-05 20:39:07 +0430; 10ms ago
     Docs: https://docs.docker.com
  Process: 5943 ExecStart=/usr/bin/dockerd -H fd:// (code=exited, status=1/FAILURE)
 Main PID: 5943 (code=exited, status=1/FAILURE)
dpkg: error processing package docker-engine (--configure):
 installed docker-engine package post-installation script subprocess returned error exit status 1
Errors were encountered while processing:
 docker-engine
E: Sub-process /usr/bin/dpkg returned an error code (1)
root@kali: uname -a
Linux kali 4.15.0-kali2-amd64 #1 SMP Debian 4.15.11-1kali1 (2018-03-21) x86_64 GNU/Linux
thanks in advance